# llm-discord-public

./: Cargo.toml  generate_embeddings.ipynb  generate_training_data.ipynb  olympics-1-collect-data.ipynb  olympics-2-create-qa.ipynb  olympics-3-train-qa.ipynb  sem_search example.ipynb  sem_search.ipynb
data/: test_training_data.jsonl
src/: main.rs
