[package]
name = "llm-discord"
version = "0.1.0"
authors = ["max.loeffler@uniswap.org"]
edition = "2021"

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
async-openai = "0.10.3"
csv = "1.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
bincode = "1.3.3"
